--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -19,15 +13,51 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.TODOList {
+  background-color: #a0a8ba;
+  height: 800px;
+  width: 500px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Entry {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 14px;
+  margin-bottom: 14px;
+  background-color: white;
+  color: black;
+  font-size: 17px;
+  width: 80%;
+  height: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+input {
+  border: none;
+  outline: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+li {
+  list-style: '';
+}
+
+/* input:focus { */
+/*   outline-width: 0; */
+/*   margin-top: 0; */
+/*   margin-bottom: 0; */
+/* } */
+
+.NewEntry {
+  margin-left: auto;
+  margin-top: auto;
+  font-size: 20px;
+  border-radius: 10px;
+  height: 30px;
+  width: 15%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
