--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.Entry {
+.TODOItem {
   margin-left: auto;
   margin-right: auto;
   margin-top: 14px;
