--- a/src/App.css
+++ b/src/App.css
@@ -36,14 +36,24 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.NewEntry {
+.Button {
   margin-left: auto;
   margin-top: auto;
+  margin-left: 15px;
+  margin-right: 15px;
   font-size: 20px;
   border-radius: 10px;
   height: 30px;
   width: 15%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.container {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .DelEntry {
