--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,21 +31,61 @@ body {
   text-align: center;
 }
 
+h1 {
+  /* color: var(--p-magenta); */
+}
+
 .mainpane {
   width: 768px;
   height: auto;
-  background-color: var(--grey1);
   margin: auto;
   padding: 10px 0 10px 0;
+  background-image: linear-gradient(180deg, var(--grey2) , var(--grey4));
+  box-shadow: 0 5px 10px 5px hsl(0, 0%, 70%);
+}
+
+.inputwrapper {
+  padding: 5px 20px 5px 20px;
+}
+
+.newtodo {
+  width: auto;
+  padding: 8px 4px 8px 4px;
+  margin: 6px 0 6px 0;
+  background-color: var(--grey1);
+  border-style: solid;
+  border-width: 1px;
+  border-color: var(--grey5);
+  border-radius: 8px;
+}
+
+.itempane {
+  padding: 5px 20px 5px 20px;
+}
+
+.todoitem {
+  text-align: justify;
+  list-style-type: none;
+  padding: 8px 4px 8px 4px;
+  margin: 6px 0 6px 0;
+  background-color: var(--grey1);
+  border-style: solid;
+  border-width: 1px;
+  border-color: var(--grey5);
+  border-radius: 8px;
 }
 
 footer {
+  margin: 40px 0 0 0;
   font-size: 12px;
 }
 
 /* media queries */
 /* phones and tablets */
 @media only screen and (max-width: 768px) {
+  body {
+    font-size: 18px;
+  }
   h1 {
     font-size: 5vw;
   }
