--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -131,17 +131,18 @@ input:focus {
 }
 
 .options {
-  height: 10px;
+  height: 20px;
+  position: relative;
 }
 
-.open {
+.options.open {
   animation-name: expand-option-pane;
   animation-duration: 0.7s;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
 }
 
-.closed {
+.options.closed {
   animation-name: retract-option-pane;
   animation-duration: 0.7s;
   animation-timing-function: ease;
@@ -149,13 +150,62 @@ input:focus {
 }
 
 @keyframes expand-option-pane {
-  0% { height: 10px }
+  0% { height: 20px }
   100% { height: 100px }
 }
 
 @keyframes retract-option-pane {
   0% { height: 100px }
-  100% { height: 10px }
+  100% { height: 20px }
+}
+
+.options-toggle {
+  position: absolute;
+  top: 3px;
+  left: 20px;
+  -webkit-appearance: none;
+  border: solid var(--grey4);
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.options-toggle.open {
+  animation-name: turn-arrow-down;
+  animation-duration: 0.7s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+.options-toggle.closed {
+  animation-name: turn-arrow-right;
+  animation-duration: 0.7s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+@keyframes turn-arrow-down {
+  0% {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+  100% {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+}
+
+@keyframes turn-arrow-right {
+  0% {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
 }
 
 hr {
@@ -166,13 +216,18 @@ hr {
 }
 
 .mainfooter {
-  margin: 20px 0 0 0;
+  margin: 30px 0 0 0;
   font-size: 12px;
 }
 
 .itemfooter {
   font-size: 12px;
   margin: 0 0 0 10px;
+}
+
+ul {
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 /* media queries */
