--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -225,6 +225,7 @@ input:focus {
   position: absolute;
   top: 35px;
   /* width: 100%; */
+  padding: 0 5%;
   height: 100px;
 }
 
@@ -278,7 +279,7 @@ input:focus {
 
 .button {
   -webkit-appearance: none;
-  margin: 0 20px 0 20px;
+  margin: 0 10px;
   padding: 2px 6px;
   height: 100%;
   cursor: pointer;
@@ -360,8 +361,8 @@ button::-moz-focus-inner {
 .twitter-picker {
   z-index: 1;
   position: absolute;
-  top: 30px;
-  right: 255px;
+  top: 34px;
+  right: 251px;
   visibility: hidden;
   opacity: 0;
   transition: 0.4s;
