--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -59,16 +59,10 @@ input:focus {
   box-shadow: 0 5px 10px 5px hsl(0, 0%, 75%);
 }
 
-.inputwrapper {
-  padding: 5px 20px 5px 20px;
-  margin: 0 34px 0 0;
-}
-
-/* TODO: remove redundency */
 .newtodo {
-  width: 100%;
-  padding: 8px 16px 8px 16px;
-  margin: 6px 0 6px 0;
+  width: 90%;
+  padding: 8px 6px;
+  margin: 6px auto 6px auto;
   background-color: var(--grey1);
   border-style: solid;
   border-width: 1px;
@@ -78,6 +72,7 @@ input:focus {
   font-size: 24px;
   cursor: text;
   box-shadow: 0 2px 4px 2px hsl(0, 0%, 77%);
+  display: block;
 }
 
 ::placeholder {
@@ -86,7 +81,8 @@ input:focus {
 }
 
 .itempane {
-  padding: 5px 20px 5px 20px;
+  padding-inline-start: 0;
+  list-style-type: none;
 }
 
 .todoitem {
@@ -94,7 +90,7 @@ input:focus {
   text-align: justify;
   list-style-type: none;
   padding: 8px 6px 8px 6px;
-  margin: 8px 0 8px 0;
+  margin: 8px auto 8px auto;
   background-color: var(--grey1);
   border-style: solid;
   border-width: 1px;
@@ -103,12 +99,19 @@ input:focus {
   transition: 0.4s;
   word-break: break-all;
   box-shadow: 0 2px 4px 2px hsl(0, 0%, 77%);
+  display: block;
+  width: 90%;
 }
 
 .itemlabel {
   padding: 0 25px 0 30px;
   line-height: 1.4;
   display: block;
+  width: 100%;
+  min-height: 25px;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
 .checkitem {
