Add front end login page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -302,6 +302,8 @@ input:focus {
   border-radius: 50%;
   position: relative;
   box-shadow: none;
+  /* color: black !important; */
+  /* background-color: black !important; */
 }
 
 .options-button {
