--- a/backend/todo/templates/registration/password_change_done.html
+++ b/backend/todo/templates/registration/password_change_done.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 
 {% block content %}
-<p>{% trans "Password changed" %}</p>
+<p>{% trans "Password change successful" %}</p>
 {% endblock %}
