Style color button

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -302,8 +302,7 @@ input:focus {
   border-radius: 50%;
   position: relative;
   box-shadow: none;
-  /* color: black !important; */
-  /* background-color: black !important; */
+  padding: 0 0 0 0;
 }
 
 .options-button {
