--- a/backend/todo/templates/base.html
+++ b/backend/todo/templates/base.html
@@ -17,6 +17,8 @@
         <a href="{% url 'logout' %}">{% trans "Log out" %}</a> |
         <a href="{% url 'password_change' %}">{% trans "Change password" %}</a>) {% else %}
         <a href="{% url 'login' %}">{% trans "Log in" %}</a> {% endif %}
+        <a href="{% url 'django_registration_register' %}">{% trans "Register" %}</a> {% endif %}
+
         <hr /> {% endblock %}
     </div>
 
