--- a/backend/todo/templates/base.html
+++ b/backend/todo/templates/base.html
@@ -16,7 +16,7 @@
         <a href="{% url 'index' %}">{% trans "Home" %}</a> | {% if user.is_authenticated %} {% trans "Logged in" %}: {{ user.username }} (
         <a href="{% url 'logout' %}">{% trans "Log out" %}</a> |
         <a href="{% url 'password_change' %}">{% trans "Change password" %}</a>) {% else %}
-        <a href="{% url 'login' %}">{% trans "Log in" %}</a> {% endif %}
+        <a href="{% url 'login' %}">{% trans "Log in" %}</a>
         <a href="{% url 'django_registration_register' %}">{% trans "Register" %}</a> {% endif %}
 
         <hr /> {% endblock %}
